--- a/bug_tracking/home/templates/home/start.html
+++ b/bug_tracking/home/templates/home/start.html
@@ -1,13 +1,121 @@
-{% extends 'home/base.html' %} {%load static%} {% block content %}
+{% extends 'home/base.html' %} {%load static%} {% block content %} {% load humanize %}
 
 <link rel="stylesheet" href='{%static "css/start.css"%}'>
 
 <section class="home">
   {%if request.user.is_authenticated%}
-  <div class="text">Bienvenido {{request.user.username | title}}</div>
+  <div class="text" style="text-align: center;">Bienvenido {{request.user.username | title}}</div>
 
+  <ul class="box-info">
+    <li>
+      <i class='bx bxs-calendar-check'></i>
+      <span class="text">
+        <h3>{{reportes_solucionados}}</h3>
+        <p>de tus errores se han resuelto</p>
+      </span>
+    </li>
+    <li>
+      <i class='bx bxs-group'></i>
+      <span class="text">
+        <h3>{{reportes_asignados}}</h3>
+        <p>de tus errores están asignados</p>
+      </span>
+    </li>
+    <li>
+      <i class='bx bxs-dollar-circle'></i>
+      <span class="text">
+        <h3>{{reportes_enproceso}}</h3>
+        <p>de tus errores se están viendo</p>
+      </span>
+    </li>
+  </ul>
+  <div class="container-table">
+    <div class="table-data" style="margin-bottom: 2em;">
+      <div class="order">
+        <div class="head">
+          <h3>Bandeja de notificaciones</h3>
+          
+          <!-- <a href="www.google.cl"><i class='bx bx-search'></i></a>
+          <i class='bx bx-filter'></i> -->
+        </div>
+        <table>
+          <thead>
+            <tr>
+              <th>N°</th>
+              <th>Mensaje</th>
+            </tr>
+          </thead>
+          <tbody>
+            
+            <tr>
+              <td>
+                <p>0</p>
+              </td>
+              <td>
+                <p>No hay notificaciones</p>
+              </td>
+            
+            </tr>
 
+            <!-- <tr>
+              <td>No hay errores disponibles</p>
+            </tr> -->
+            
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+  <div class="container-table">
+    <div class="table-data" style="margin-bottom: 2em;">
+      <div class="order">
+        <div class="head">
+          <h3>Tus reportes enviados</h3>
+          
+          <a href="www.google.cl"><i class='bx bx-search'></i></a>
+          <i class='bx bx-filter'></i>
+        </div>
+        <table>
+          <thead>
+            <tr>
+              <th>ID</th>
+              <th>Título</th>
+              <th>Fecha</th>
+              <th>Proyecto</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% if reportes_usuario %}
+            <tr>
+              {% for ReporteBug in reportes_usuario %}
+              <td>
+                <p>{{ ReporteBug.id_reporte }}</p>
+                <img src={%static "images/logo.png"%}>
+              </td>
+              <td>{{ ReporteBug.titulo | truncatechars:90 }}</td>
+              <td>{{ ReporteBug.fecha_reporte }}</td>
+              <td>{{ ReporteBug.id_proyecto.nombre_proyecto }}</td>
+            </tr>
+              {%endfor%}
+            {%else%}
+            <tr>
+              <td>No hay errores disponibles</p>
+            </tr>
+            {%endif%}
+            
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
 
+  <footer>
+    <div class="text" style="text-align: center;">
+      {%if request.user.is_superuser%}
+      Hemos detectado que eres administrador, te recomendamos utilizar el panel de administración
+      {%endif%}
+    </div>
+  </footer>
 
 
 
@@ -31,14 +139,16 @@
                   <th>ID</th>
                   <th>Título</th>
                   <th>Fecha</th>
+                  <th>Proyecto</th>
                 </tr>
             </thead>
             <tbody>
               {% for ReporteBug in listar_reportes %}
               <tr>
                 <td>{{ ReporteBug.id_reporte }}</td>
-                <td>{{ ReporteBug.reporte }}</td>
-                <td>{{ ReporteBug.fecha_reporte }}</td>
+                <td>{{ ReporteBug.titulo | truncatechars:30 }}</td>
+                <td>{{ ReporteBug.fecha_reporte | naturaltime }}</td>
+                <td>{{ ReporteBug.id_proyecto.nombre_proyecto }}</td>
               </tr>
               {%endfor%}
             </tbody>
@@ -61,7 +171,7 @@
             </tbody>
       </table>
       {% endif %}
-      </div>
+    </div>
 
 
 
@@ -87,7 +197,6 @@
                 <tr>
                   <th>ID</th>
                   <th>Título</th>
-                  <th>Descripción</th>
                   <th>Fecha</th>
                   <th>Proyecto</th>
                 </tr>
@@ -96,9 +205,9 @@
               {% for Bug in  listar_bug%}
               <tr>
                   <td>{{ Bug.id_bug }}</td>
-                  <td>{{ Bug.titulo }}</td>
-                  <td>{{ Bug.descripcion }}</td>
-                  <td>{{ Bug.fecha_reporte }}</td>
+                  <td>{{ Bug.titulo | truncatechars:30 }}</td>
+                  <td>{{ Bug.fecha_reporte | naturaltime }}</td>
+                  <td>{{ Bug.id_proyecto.nombre_proyecto }}</td>
               </tr>
               {%endfor%}
               </tbody>
@@ -121,7 +230,7 @@
             </tbody>
       </table>
       {% endif %}
-      </div>
+    </div>
   </div>
   <div class="parallax second">
     <div class="item">
@@ -152,6 +261,6 @@
     </div>
   </div>
   {%endif%}
-  
+
 </section>
 {% endblock %}
