--- a/bug_tracking/home/templates/registration/login.html
+++ b/bug_tracking/home/templates/registration/login.html
@@ -38,7 +38,7 @@
               </div>
               <div class="hr"></div>
               <div class="foot-lnk">
-                <a href="#forgot">¿Olvidaste la contraseña?</a>
+                <a href="{% url 'home:password_reset' %}">¿Olvidaste la contraseña?</a>
               </div>
             </form>
 
