--- a/bug_tracking/home/static/css/login.css
+++ b/bug_tracking/home/static/css/login.css
@@ -154,3 +154,8 @@ a{color:inherit;text-decoration:none}
 .bottom-content li.login-button{
 	display: none;
 }
+
+input:-webkit-autofill{
+    -webkit-text-fill-color: white;
+    transition: background-color 5000s ease-in-out 0s; /* Evita que el color de fondo cambie a blanco */
+}
