--- a/bug_tracking/home/static/css/register.css
+++ b/bug_tracking/home/static/css/register.css
@@ -151,3 +151,8 @@ a{color:inherit;text-decoration:none}
 	text-align:center;
     color: white;
 }
+
+input:-webkit-autofill{
+    -webkit-text-fill-color: white;
+    transition: background-color 5000s ease-in-out 0s; /* Evita que el color de fondo cambie a blanco */
+}
