--- a/bug_tracking/home/templates/registration/password_reset_complete.html
+++ b/bug_tracking/home/templates/registration/password_reset_complete.html
@@ -1,17 +1,23 @@
-{% extends "admin/base_site.html" %}
+{% extends "home/base.html" %}  {%load static%} {% block content %}
 {% load i18n %}
 
-{% block breadcrumbs %}
-<div class="breadcrumbs">
-<a href="{% url 'admin:index' %}">{% translate 'Home' %}</a>
-&rsaquo; {% translate 'Password reset' %}
-</div>
-{% endblock %}
+<link rel="stylesheet" href='{%static "css/reset.css"%}'>
+<style>
+    .home{
+        background-image: url("{% static 'images/treesSnow.png' %}");
+        background-repeat: no-repeat;
+    }
+</style>
+<section class="home">
+    <div class="container-reset">
+        <p class="titulo">Restablecimiento completado</p>
+        <p style="margin: 0 0 15%">{% translate "Your password has been set.  You may go ahead and log in now." %}</p>
+        <button><a href="{{ login_url }}">{% translate 'Log in' %}</a></button>
+    </div>
+</section>
 
-{% block content %}
 
-<p>{% translate "Your password has been set.  You may go ahead and log in now." %}</p>
 
-<p><a href="{{ login_url }}">{% translate 'Log in' %}</a></p>
+
 
 {% endblock %}
