--- a/bug_tracking/home/templates/registration/password_reset_confirm.html
+++ b/bug_tracking/home/templates/registration/password_reset_confirm.html
@@ -1,22 +1,25 @@
-{% extends "admin/base_site.html" %}
+{% extends "home/base.html" %}  {%load static%} {% block content %}
 {% load i18n static %}
 
-{% block extrastyle %}{{ block.super }}<link rel="stylesheet" href="{% static "admin/css/forms.css" %}">{% endblock %}
-{% block breadcrumbs %}
-<div class="breadcrumbs">
-<a href="{% url 'admin:index' %}">{% translate 'Home' %}</a>
-&rsaquo; {% translate 'Password reset confirmation' %}
-</div>
-{% endblock %}
+<link rel="stylesheet" href='{%static "css/reset.css"%}'>
+<style>
 
-{% block content %}
+    .home {
+
+      background-image: url("{% static 'images/treesSnow.png' %}");
+      background-repeat: no-repeat;
+
+}
+</style>
+
 
 {% if validlink %}
-
-<p>{% translate "Please enter your new password twice so we can verify you typed it in correctly." %}</p>
-
+<section class="home">
+    <p>{% translate "Please enter your new password twice so we can verify you typed it in correctly." %}</p>
+    <div class="text">Reestablecer contraseña</div>
 <form method="post">{% csrf_token %}
-<fieldset class="module aligned">
+<div class="container-reset">
+    <p class="titulo">CAMBIO DE CONTRASEÑA</p>
     <input class="hidden" autocomplete="username" value="{{ form.user.get_username }}">
     <div class="form-row field-password1">
         {{ form.new_password1.errors }}
@@ -29,12 +32,23 @@
         {{ form.new_password2 }}
     </div>
     <input type="submit" value="{% translate 'Change my password' %}">
-</fieldset>
+</div>
 </form>
+</section>
+
+
 
 {% else %}
+<section class="home">
+    <div class="container-reset">
+        <p class="titulo">ERROR</p>
+        <div class="hr" style="margin-top: 10px;"></div>
+        <p>{% translate "The password reset link was invalid, possibly because it has already been used.  Please request a new password reset." %}</p>
+        <button><a href="{% url 'password_reset' %}">Pedir una nueva petición</a></button>
+        
+    </div>
+</section>
 
-<p>{% translate "The password reset link was invalid, possibly because it has already been used.  Please request a new password reset." %}</p>
 
 {% endif %}
 
