--- a/bug_tracking/buglist/static/css/buglist.css
+++ b/bug_tracking/buglist/static/css/buglist.css
@@ -138,20 +138,42 @@
   margin: 0;
   cursor: pointer;
 }
+.table-data a{
+  color: var(--text-color);
+  text-decoration: none;
+}
 
-/* Estilo del botón de flecha */
-.flecha {
-  background: none;
-  border: none;
-  padding: 0;
-  margin: 0;
-  cursor: pointer;
+.icon-color{
+  color: var(--text-color);
+}
+
+input[type="text"]{
+  border: 1px solid var(--body-color);
+  background-color: var(--body-color);
+  color: var(--text-color);
+  border-radius: 5px;
+  padding: 5px;
+  margin: 5px;
+
+}
+input[type="text"]:focus{
+  outline: none;
+  border: 1px solid var(--sidebar-color);
+}
+input[type="text"]::placeholder{
+  color: var(--text-color);
 }
 
 /* Estilo del icono de flecha */
-.flecha i {
-  font-size: 13px; /* Tamaño del icono */
-  color: blue; /* Color azul */
+.flecha bx.bx-sort-down, bx.bx-sort-down::before {
+  font-size: 16px; /* Tamaño del icono */
+  color: white; /* Color azul */
+  line-height: 1; /* Ajuste del espaciado vertical */
+}
+
+flecha bx.bx-sort-up {
+  font-size: 16px; /* Tamaño del icono */
+  color: white; /* Color azul */
   line-height: 1; /* Ajuste del espaciado vertical */
 }
 
