--- a/bug_tracking/home/static/css/login.css
+++ b/bug_tracking/home/static/css/login.css
@@ -45,6 +45,7 @@ a{color:inherit;text-decoration:none}
 .login-form .group .label,
 .login-form .group .button{
 	text-transform:uppercase;
+	color: white;
 
 }
 .login-html .tab{
