--- a/bug_tracking/home/static/css/register.css
+++ b/bug_tracking/home/static/css/register.css
@@ -2,7 +2,7 @@
 *,:after,:before{box-sizing:border-box}
 .clearfix:after,.clearfix:before{content:'';display:table}
 .clearfix:after{clear:both;display:block}
-a{color:inherit;text-decoration:none}
+a{color:white;text-decoration:none}
 
 .container_session .text{
     text-align: center;
@@ -45,6 +45,7 @@ a{color:inherit;text-decoration:none}
 .login-form .group .label,
 .login-form .group .button{
 	text-transform:uppercase;
+	color: white;
 
 }
 .login-html .tab{
